# voyce

./: .env.example  .gitignore  AUTHENTICATION_SETUP.md  COLLABORATOR_GUIDE.md  DATABRICKS_SETUP.md  DBEAVER_SETUP.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  Dockerfile  GITHUB_SETUP.md  IMPLEMENTATION_COMPLETE.md  LICENSE  LOCAL_DEPLOYMENT_GUIDE.md  PROJECT_SUMMARY.md  PUSH_TO_CORRECT_REPO.md  QUICK_START.md  README.md  SETUP_SUMMARY.md  UPSTASH_SETUP.md  databricks.yml  deploy.sh  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  run_local.sh
backend/: .env.example  README.md  celery_app.py  requirements.txt  start_sync_services.sh  stop_sync_services.sh
chrome-extension/: FEATURES.md  INSTALLATION.md  README.md  VERIFICATION.md  manifest.json
config/: local.py
database/: 001_initial_schema.sql
databricks-notebooks/: 00_unity_catalog_setup.py  01_data_ingestion.py  02_voice_processing.py  03_sentiment_analysis.py  04_analytics_queries.sql  05_model_training.py  06_batch_inference.py  README.md
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  COST_OPTIMIZATION.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  ML_PIPELINE.md  README.md  SECURITY.md  SETUP.md  TESTING.md  TROUBLESHOOTING.md
frontend/: .env.example  FILES_CREATED.md  QUICK_START.md  README.md  index.html  package.json  tailwind.config.js
monitoring/: prometheus.yml
notebooks/: example_notebook.py
scripts/: init_db.py  push_to_correct_repo.sh  rotate_oauth_token.py  setup_auto_token_rotation.sh  setup_pgpass.sh
src/: __init__.py
tests/: __init__.py  conftest.py
(+63 files in other folders)
